--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <td ><p classs="tab3">I'm Laddu. <br> A Web Designer.</p>
         <br><br></td>
 
-        <td ><h6 class="tab2">I'm Web Developer. <br>Last Job Profile: Er.Customer Support & Installation.</h6>
+        <td ><h6 class="tab2">I'm Web Developer. <br>Last Job Profile: Er. IT Customer Support & Installation.</h6>
         <br><br></td>
       </tr>
     </tbody>
