--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
   </head>
   <body>
-<h1>Laddu Kumar Ram</h1>
+<a href="https://lasag123.github.io/"><h1>Laddu Kumar Ram</h1></a>
 <img src="lasag.jpg" alt="laddu pics">
 <div class="table">
 
